force-app/main/default/objects/Related_Country__c/Related_Country__c.object-meta.xml
<CustomObject>
    <label>Related Country</label>
    <nameField>
        <displayFormat>RC-{0000}</displayFormat>
        <label>Related Country ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Countries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>