force-app/main/default/objects/Related_Country__c/fields/Commodity__c.field-meta.xml
<CustomField>
    <fullName>Commodity__c</fullName>
    <label>Commodity</label>
    <referenceTo>Commodity__c</referenceTo>
    <relationshipLabel>Related Countries</relationshipLabel>
    <relationshipName>Related_Countries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>