force-app/main/default/objects/Related_Country__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Country__c.Embargoed__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Related Countries</relationshipLabel>
    <relationshipName>Related_Countries</relationshipName>
    <type>Lookup</type>
</CustomField>