force-app/main/default/objects/Related_Country__c/fields/Prioritized__c.field-meta.xml
<CustomField>
    <fullName>Prioritized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prioritized</label>
    <type>Checkbox</type>
</CustomField>